# c-battleship

./: CMakeLists.txt  a.out  asset.hpp  board.hpp  main.cpp  omp.cpp  omp.s  player.cpp  player.hpp
src/: asset.hpp  board.hpp  bstype.hpp  main.cpp
src/assets/: battleship.hpp
